@@ -1470,83 +1470,83 @@ $strPhpArray = 'PHP-array';
 $strImportLargeFileUploading = 'Het geuploade bestand is mogelijk groter dan de limiet toestaat, of u heeft last van een een bekende bug in op webkit gebaseerde browsers(Safari, Google Chrome, Arora).';
 $strImportProceedingFile = 'Het bestand wordt verwerkt, een ogenblik geduld.';
 $strImportUploadInfoNotAvailable = 'Een ogenblik geduld, het bestand wordt geupload. Details over de voortgang zijn niet beschikbaar.';
-$strImportNoticePt1 = 'The following structures have either been created or altered. Here you can:';  //to translate
-$strImportNoticePt3 = 'Change any of its settings by clicking the corresponding "Options" link';  //to translate
-$strGoToDatabase = 'Go to database';  //to translate
-$strGoToTable = 'Go to table';  //to translate
-$strGoToView = 'Go to view';  //to translate
-$strStructureLC = 'structure';  //to translate
-$strSettings = 'settings';  //to translate
-$strImportODS = 'Open Document Spreadsheet';  //to translate
-$strImportColNames = 'Column names in first row';  //to translate
-$strImportEmptyRows = 'Do not import empty rows';  //to translate
-$strImportODSPercents = 'Import percentages as proper decimals (12.00% to .12)';  //to translate
-$strImportODSCurrency = 'Import currencies ($5.00 to 5.00)';  //to translate
-$strImportXLS = 'Excel 97-2003 XLS Workbook';  //to translate
-$strImportNoticePt2 = 'View a structure`s contents by clicking on its name';  //to translate
-$strImportNoticePt4 = 'Edit its structure by following the "Structure" link';  //to translate
-$strImportXLSX = 'Excel 2007 XLSX Workbook';  //to translate
-$strXMLError = 'The XML file specified was either malformed or incomplete. Please correct the issue and try again.';  //to translate
-$strXMLExportContents = 'Export contents';  //to translate
-$strXMLExportFunctions = 'Export functions';  //to translate
-$strXMLExportProcedures = 'Export procedures';  //to translate
-$strXMLExportStructs = 'Export Structure Schemas (recommended)';  //to translate
-$strXMLExportTables = 'Export tables';  //to translate
-$strXMLExportTriggers = 'Export triggers';  //to translate
-$strXMLExportViews = 'Export views';  //to translate
-$strTracking = 'Tracking';  //to translate
-$strTrackingActivateTrackingFor = 'Activate tracking for %s.%s';  //to translate
-$strTrackingActivated = 'Tracking of %s.%s is activated.';  //to translate
-$strTrackingActivateNow = 'Activate now';  //to translate
-$strTrackingCreateVersion = 'Create version';  //to translate
-$strTrackingCreateVersionOf = 'Create version %s of %s.%s';  //to translate
-$strTrackingDataDefinitionStatement = 'Data definition statement';  //to translate
-$strTrackingDataManipulationStatement = 'Data manipulation statement';  //to translate
-$strTrackingDate = 'Date';  //to translate
-$strTrackingDeactivateNow = 'Deactivate now';  //to translate
-$strTrackingDeactivateTrackingFor = 'Deactivate tracking for %s.%s';  //to translate
-$strTrackingDoIt = 'Do it';  //to translate
-$strTrackingExportAs = 'Export as %s';  //to translate
-$strTrackingIsActive = 'Tracking is active.';  //to translate
-$strTrackingIsDeactive = 'Tracking is deactive.';  //to translate
-$strTrackingMechanism = 'Tracking Mechanism';  //to translate
-$strTrackingReport = 'Tracking report';  //to translate
-$strTrackingReportClose = 'Close';  //to translate
-$strTrackingSelectStructureAndData = 'Structure and Data';  //to translate
-$strTrackingSelectDataOnly = 'Data only';  //to translate
-$strTrackingSelectStructureOnly = 'Structure only';  //to translate
-$strTrackingShowLogDateUsers = 'Show %s with dates from %s to %s by user %s %s';  //to translate
-$strTrackingShowVersions = 'Show versions';  //to translate
-$strTrackingSQLDump = 'SQL dump';  //to translate
-$strTrackingSQLDumpFile = 'SQL dump (file download)';  //to translate
-$strTrackingSQLExecution = 'SQL execution';  //to translate
-$strTrackingSQLExecutionAlert = 'This option will replace your table and contained data.';  //to translate
-$strTrackingSQLExecuted = 'SQL statements executed.';  //to translate
-$strTrackingSQLExported = 'SQL statements exported. Please copy the dump or execute it.';  //to translate
-$strTrackingStatements = 'Tracking statements';  //to translate
-$strTrackingStatusActive = 'active';  //to translate
-$strTrackingStatusDeactive = 'deactive';  //to translate
-$strTrackingStructureSnapshot = 'Structure snapshot';  //to translate
-$strTrackingThDatabase = 'Database';  //to translate
-$strTrackingThTable = 'Table';  //to translate
-$strTrackingThLastVersion = 'Last version';  //to translate
-$strTrackingThVersion = 'Version';  //to translate
-$strTrackingThCreated = 'Created';  //to translate
-$strTrackingThUpdated = 'Updated';  //to translate
-$strTrackingThStatus = 'Status';  //to translate
-$strTrackingThShow = 'Show';  //to translate
-$strTrackingTrackDDStatements = 'Track these data definition statements:';  //to translate
-$strTrackingTrackDMStatements = 'Track these data manipulation statements:';  //to translate
-$strTrackingTrackTable = 'Track table';  //to translate
-$strTrackingTrackedTables = 'Tracked tables';  //to translate
-$strTrackingUntrackedTables = 'Untracked tables';  //to translate
-$strTrackingUsername = 'Username';  //to translate
-$strTrackingVersions = 'Versions';  //to translate
-$strTrackingVersionCreated = 'Version %s is created, tracking for %s.%s is activated.';  //to translate
-$strTrackingVersionActivated = 'Tracking for %s.%s , version %s is activated.';  //to translate
-$strTrackingVersionDeactivated = 'Tracking for %s.%s , version %s is deactivated.';  //to translate
-$strTrackingVersionSnapshotSQL = 'Version %s snapshot (SQL code)';  //to translate
-$strTrackingDatabaseLog = 'Database Log';  //to translate
+$strImportNoticePt1 = 'De volgende structuren zijn aangemaakt of aangepast. Hier kunt u:';
+$strImportNoticePt3 = 'Een instelling veranderen door op "Opties" te klikken';
+$strGoToDatabase = 'Ga naar database';  
+$strGoToTable = 'Ga naar tabel';  
+$strGoToView = 'Ga naar view';  
+$strStructureLC = 'structuur';  
+$strSettings = 'instellingen';  
+$strImportODS = 'Open Document Spreadsheet';  
+$strImportColNames = 'Kolomnamen in eerste rij';  
+$strImportEmptyRows = 'Lege rijen niet importeren';  
+$strImportODSPercents = 'Percentages als decimalen importeren (12.00% naar .12)';  
+$strImportODSCurrency = 'Valuta importeren ($5.00 naar 5.00)';  
+$strImportXLS = 'Excel 97-2003 XLS Werkboek';  
+$strImportNoticePt2 = 'De inhoud van een structuur bekijken door er op te klikken';  
+$strImportNoticePt4 = 'Klik op de "Structuur"-koppeling om de structuur aan te passen';  
+$strImportXLSX = 'Excel 2007 XLSX Werkboek';  
+$strXMLError = 'Het XML-bestand was beschadigd of onvolledig. Repareer het bestand en probeer opnieuw. ';  
+$strXMLExportContents = 'Exporteer inhoud';  
+$strXMLExportFunctions = 'Exporteer functies';  
+$strXMLExportProcedures = 'Exporteer procedures';  
+$strXMLExportStructs = 'Exporteer structuurschema\'s (recommended)';  
+$strXMLExportTables = 'Exporteer tabellen';  
+$strXMLExportTriggers = 'Exporteer triggers';  
+$strXMLExportViews = 'Exporteer views';  
+$strTracking = 'Tracking';  
+$strTrackingActivateTrackingFor = 'Tracking inschakelen voor %s.%s';  
+$strTrackingActivated = 'Tracking is ingeschakeld voor %s.%s.';  
+$strTrackingActivateNow = 'Nu inschakelen';  
+$strTrackingCreateVersion = 'Versie aanmaken';  
+$strTrackingCreateVersionOf = 'Versie %s van %s.%s aanmaken';  
+$strTrackingDataDefinitionStatement = 'Definitie-statement';  
+$strTrackingDataManipulationStatement = 'Manipulatie-statement';  
+$strTrackingDate = 'Datum';  
+$strTrackingDeactivateNow = 'Nu uitschakelen';  
+$strTrackingDeactivateTrackingFor = 'Tracking uitschakelen voor %s.%s';  
+$strTrackingDoIt = 'Aan de slag';  
+$strTrackingExportAs = 'Exporteren als %s';  
+$strTrackingIsActive = 'Tracking is ingeschakeld.';  
+$strTrackingIsDeactive = 'Tracking is uitgeschakeld.';  
+$strTrackingMechanism = 'Tracking-mechanisme';  
+$strTrackingReport = 'Tracking-rapport';  
+$strTrackingReportClose = 'Sluiten';  
+$strTrackingSelectStructureAndData = 'Structuur en data';  
+$strTrackingSelectDataOnly = 'Alleen data';  
+$strTrackingSelectStructureOnly = 'Alleen structuur';  
+$strTrackingShowLogDateUsers = 'Laat %s zien met datums van %s tot %s door gebruiker %s %s';  
+$strTrackingShowVersions = 'Versies weergeven';  
+$strTrackingSQLDump = 'SQL-dump';  
+$strTrackingSQLDumpFile = 'SQL-dump (naar bestand)';  
+$strTrackingSQLExecution = 'SQL-uitvoering';  
+$strTrackingSQLExecutionAlert = 'Deze optie vervangt de tabel en alle data van die tabel.';  
+$strTrackingSQLExecuted = 'SQL-statements uitgevoerd.';  
+$strTrackingSQLExported = 'SQL-statements geëxporteerd. Kopiëer de dump of voer de dump uit.';  
+$strTrackingStatements = 'Tracking-statements';  
+$strTrackingStatusActive = 'ingeschakeld';  
+$strTrackingStatusDeactive = 'uitgeschakeld';  
+$strTrackingStructureSnapshot = 'Structuur-snapshot';  
+$strTrackingThDatabase = 'Database';  
+$strTrackingThTable = 'Tabel';  
+$strTrackingThLastVersion = 'Laatste versie';  
+$strTrackingThVersion = 'Versie';  
+$strTrackingThCreated = 'Aangemaakt';  
+$strTrackingThUpdated = 'Bijgewerkt';  
+$strTrackingThStatus = 'Status';  
+$strTrackingThShow = 'Weergeven';  
+$strTrackingTrackDDStatements = 'Deze definitie-statements tracken:';  
+$strTrackingTrackDMStatements = 'Deze manipulatie-statements tracken:';  
+$strTrackingTrackTable = 'Tabel tracken';  
+$strTrackingTrackedTables = 'Tabellen met tracker';  
+$strTrackingUntrackedTables = 'Tabellen zonder tracker';  
+$strTrackingUsername = 'Gebruikersnaam';  
+$strTrackingVersions = 'Versies';  
+$strTrackingVersionCreated = 'Versie %s aangemaakt, tracking voor %s.%s ingeschakeld.';  
+$strTrackingVersionActivated = 'Tracking voor %s.%s , versie %s ingeschakeld.';  
+$strTrackingVersionDeactivated = 'Tracking voor %s.%s , versie %s is uitgeschakeld.';  
+$strTrackingVersionSnapshotSQL = 'Versie %s snapshot (SQL-code)';  
+$strTrackingDatabaseLog = 'Database-log';  
 $strSynchronize = 'Synchronize';  //to translate
 $strSynchronizationNote='Target database will be completely synchronized with source database. Source database will remain unchanged.';  //to translate
 $strSynchronizeDb= 'Synchronize Databases';  //to translate
