@@ -34,6 +34,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + [core] Addded ability for tracking changes made through phpMyAdmin
 + rfe #2839504 [engines] Support InnoDB plugin's new row formats 
 + [core] Added ability for synchronizing databases among servers.
++ [lang] #2843101 Dutch update, thanks to scavenger2008
 
 3.2.2.0 (not yet released)
 - bug #2825293 [structure] Default value for a BIT column
